<resources>
    <string name="app_name">Cinematix</string>
    <string name="banner_text">BANNER</string>
    <string name="logo">Logo</string>
    <string name="vignette_effect">Vignette_Effect</string>
    <string name="get_started">Get Started</string>
    <string name="tagline">Enjoy Your Streaming with Your Loved Ones, One Ticket at a Time!</string>
    <string name="title_activity_movie_lists">MovieLists</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="ok">OK</string>
    <string name="success_note">Success!</string>

    <string name="non_existent">This user does not exists.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="chosen">chosen</string>
    <string name="seats">Selected Seat:</string>
    <string name="rowOnePrice">Price: 550.00 PHP</string>
    <string name="rowTwoPrice">Price: 450.00 PHP</string>
    <string name="rowThreePrice">Price: 400.00 PHP</string>
    <string name="rowFourPrice">Price: 350.00 PHP</string>
    <string name="price">Price:</string>
    <string name="go_to_form">Go To Form</string>

    <string name="secure_you_tix_now">Secure your tix, now!</string>
    <string name="full_name">Full Name</string>
    <string name="movie_title">Movie Title: </string>
    <string name="number_of_tickets">No. of Tickets: </string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="number_of_seats"> Seat No.: </string>
    <string name="director">Director: </string>
    <string name="runtime">Runtime: </string>
    <string name="year">Year: </string>
    <string name="Price_of_Tix"> Price: </string>
    <string name="icon">icon</string>
    <string name="go_to_seats">Pick Your Seats</string>

    <string name="guideline_one">Book your tickets online: Convenience and Efficiency - Queuing for movie tickets has never been an enjoyable experience, even before recent times. Online ticketing eliminates the inconvenience, especially for those less tech-savvy. Beyond convenience, it reduces paper usage, minimizing waste, and queues, and creating a safer and more efficient transaction process for cinemas and moviegoers.</string>
    <string name="guideline_two">Avoid peak hours and locations: Enhanced Movie Experience - To fully appreciate the latest films, bigger cinemas often provide a superior viewing experience. This can be challenging in online platforms or smaller theaters. For movie enthusiasts, the trick is to plan visits during off-peak hours, weekdays, or cinema opening/closing times. Opting for less crowded branches ensures a more personalized experience, although services may vary.</string>
    <string name="guideline_three">Don’t bring snacks: Streamlined Enjoyment - Bringing fewer items when going out simplifies post-movie sanitization concerns. Moviegoers are generally prohibited from eating or drinking in cinemas, making it practical to fill up before or after the movie. Classic movie snacks can be prepared at home or ordered through delivery services for added convenience.</string>
    <string name="guideline_four">Sanitize your seats: Personal Hygiene and Consideration - Equating cinema seats to public surfaces, regular sanitization is recommended. Considering the extended physical contact, using an unscented disinfectant is courteous to fellow moviegoers. Some may even choose to bring a washable or disposable seat cover for added cleanliness.</string>
    <string name="guideline_five">Review Cinema Policies: Informed Decision-Making - Familiarize yourself with the specific policies of the cinema you plan to visit. This includes rules on photography, noise, and other guidelines to ensure a harmonious experience for all patrons.</string>
    <string name="guideline_six">Support Local Cinemas: Community Engagement - Consider supporting local or independent cinemas. These establishments often contribute to the cultural fabric of the community and may offer a distinct and intimate movie-going experience.</string>
    <string name="gen_guide_notes">General Guidelines and Note</string>
    <string name="next">Next</string>
    <string name="congrats_here_s_your_receipt">Congrats, here\'s your tixx!</string>
    <string name="confetti_congrats">Confetti_congrats</string>
    <string name="back_to_home">Back to Home</string>
    <string name="receipt_overlay">Receipt_Overlay</string>
    <string name="vignette_overlay">vignette_overlay</string>
    <string name="background_for_guidelines">background_for_guidelines</string>
    <string name="username_taken">Username Taken.</string>
</resources>