<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#0b2d39"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ticket_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/icon" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/full_name"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:inputType="textCapWords"
        android:backgroundTint="#ffffff"
        android:padding="12dp"
        android:autofillHints="Name: " />

    <EditText
        android:id="@+id/movieNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/movie_title"
        android:inputType="textCapWords"
        android:backgroundTint="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:autofillHints="Movie Name: " />

    <EditText
        android:id="@+id/Price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/Price_of_Tix"
        android:inputType="number"
        android:backgroundTint="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:autofillHints="Price: " />

    <EditText
        android:id="@+id/numTicketsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/number_of_tickets"
        android:inputType="number"
        android:backgroundTint="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:autofillHints="number" />

    <EditText
        android:id="@+id/numSeats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/number_of_seats"
        android:inputType="number"
        android:backgroundTint="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:padding="12dp" />

    <Button
        android:id="@+id/buyTicketsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/buy_tickets"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/secure_you_tix_now"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF" />

</LinearLayout>