<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuidelinesNotesActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/guidelines"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_for_guidelines" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/vignette_2"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:fontFamily="@font/sf_ui"
        android:layout_height="wrap_content"
        android:text="@string/gen_guide_notes"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.50"
        android:paddingStart="10dp"
        android:textAlignment="center"
        android:paddingEnd="10dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/guideLineOneChckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/guideline_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:layout_width="match_parent"
        android:id="@+id/guideLineTwoChckBox"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui"
        app:layout_constraintVertical_bias="0.20"
        app:layout_constraintHorizontal_bias="0.00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/guideline_two"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.30"
        android:id="@+id/guideLineThreeChckBox"
        app:layout_constraintHorizontal_bias="0.00"
        android:fontFamily="@font/sf_ui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/guideline_three"/>

    <CheckBox
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry"
        android:fontFamily="@font/sf_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/guideLineFourChckBox"
        app:layout_constraintVertical_bias="0.40"
        app:layout_constraintHorizontal_bias="0.00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/guideline_four"/>

    <CheckBox
        android:layout_width="match_parent"
        android:fontFamily="@font/sf_ui"
        android:id="@+id/guideLineFiveChckBox"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.51"
        app:layout_constraintHorizontal_bias="0.00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/guideline_five"/>

    <CheckBox
        android:fontFamily="@font/sf_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry"
        app:layout_constraintVertical_bias="0.62"
        app:layout_constraintHorizontal_bias="0.00"
        android:id="@+id/guideLineSixChckBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/guideline_six"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/proceedToConfirmation"
        android:text="@string/next"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.73"
        app:layout_constraintHorizontal_bias="0.50"/>

</androidx.constraintlayout.widget.ConstraintLayout>