<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeatsActivity">

    <ImageView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintVertical_bias="0.05"
        android:id="@+id/banner"
        android:layout_height="500dp"
        android:layout_width="250dp"
        android:contentDescription="@string/chosen"/>

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintVertical_bias="0.05"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/titleAndYear"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.15"
        android:id="@+id/title"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.20"
        android:id="@+id/year"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.25"
        android:id="@+id/director"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.30"
        android:id="@+id/runtime"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintVertical_bias="0.59"
        android:text="@string/seats"
        android:id="@+id/selectedSeatTextView"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintVertical_bias="0.59"
        android:text="@string/price"
        android:textStyle="bold"
        android:id="@+id/selectedSeatPrice"/>

    <GridLayout
        app:layout_constraintHorizontal_bias="0.00"
        app:layout_constraintVertical_bias="0.78"
        android:id="@+id/seatGrid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="6"
        android:layout_margin="16dp"
        android:columnOrderPreserved="false">

    </GridLayout>


    <Button
        android:id="@+id/goToForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/violet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintVertical_bias="0.93"
        android:text="@string/go_to_form"/>

</androidx.constraintlayout.widget.ConstraintLayout>